--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-Changelog for PS-AutoLab-Env
+Changelog for PSAutoLab
 
 v4.0.0
 
@@ -6,9 +6,9 @@ Complete rewrite and update of all core module commands including better error h
 Added Refresh-Host which can be used copy new configurations when updating this module
 Added Get-PSAutoLabSettings to get related version and setting information to aid in troubleshooting
 Added a Changelog
-Published Autolab module to the PowerShell Gallery
-Configuration updates
-Archived some configurations
+Published AutoLab module to the PowerShell Gallery
+Configuration updates and testing
+Archived obsolete configurations
 Added external help
 Documentation updates
 Updated README.md
